[tool.poetry]
name = "pytest-async"
version = "0.1.0"
description = ""
authors = ["mlalyko <mihail.nikitich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pytest = "^8.3.4"
pytest-coverage = "^0.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
